--- a/Blogy.WebUI/Views/_ViewImports.cshtml
+++ b/Blogy.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Blogy.WebUI
 @using Blogy.WebUI.Models
+@using Blogy.Business.DTOs.CategoryDtos
+@using Blogy.Business.DTOs.BlogDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
