--- a/Blogy.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Blogy.WebUI.Models
 @using Blogy.Business.DTOs.CategoryDtos
 @using Blogy.Business.DTOs.BlogDtos
+@using Blogy.Entity.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
