--- a/Blogy.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Blogy.Business.DTOs.CategoryDtos
 @using Blogy.Business.DTOs.BlogDtos
 @using Blogy.Entity.Entities
+@using Blogy.Business.DTOs.UserDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
