Enhance user management and fix namespace issues
Added new properties `FullName`, `UserName`, and `Email` to `ResultUserDto` to improve user data handling. Updated `UserMappings` to include mappings for `EditProfileDto` and `FullName`. Fixed namespace import issues across multiple controllers by changing `Blogy.WebUI.Areas.Consts` to `Blogy.WebUI.Consts`. Enhanced dependency injection in `BlogController`, `RoleController`, and `UsersController` for better service management. Introduced new DTOs `ChangePasswordDto` and `EditProfileDto` for handling password changes and profile edits, respectively. Added `ChangePasswordController` and `ProfileController` to manage password and profile updates, including image uploads. Created new views for changing passwords and editing profiles. Removed the `Roles` class from `Blogy.WebUI.Areas.Consts` and added it to `Blogy.WebUI.Consts`. Added a new folder `wwwroot\images\` to the project for image storage. Corrected a typo in `AssignRole.cshtml`.

--- a/Blogy.WebUI/Areas/Admin/Views/Users/AssignRole.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/Users/AssignRole.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Rol atama sayfası</h1>
-<h4>@ViewBag.fullName kullanıcısına rol atama yapabilirsiiz.</h4>
+<h4>@ViewBag.fullName kullanıcısına rol atama yapabilirsiniz.</h4>
 <form method="post">
 
     @for (int i = 0; i < Model.Count; i++)
@@ -14,7 +14,7 @@
             <input type="hidden" asp-for="@Model[i].RoleId"/>
             <input type="hidden" asp-for="@Model[i].RoleName"/>
             <input type="hidden" asp-for="@Model[i].UserId"/>
-            <input type="checkbox" asp-asp-for="@Model[i].RoleExists" class="form-check-input"/>
+            <input type="checkbox" asp-for="@Model[i].RoleExists" class="form-check-input"/>
             <label class="form-check-label">@Model[i].RoleName</label>
         </div>
     }
