--- a/Blogy.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using Blogy.Business.DTOs.BlogDtos
 @using Blogy.Entity.Entities
 @using Blogy.Business.DTOs.UserDtos
+@using Blogy.Business.DTOs.CommentDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
