--- a/Blogy.WebUI/Views/UILayout/Index.cshtml
+++ b/Blogy.WebUI/Views/UILayout/Index.cshtml
@@ -38,7 +38,7 @@
 	<link rel="stylesheet" href="css/flatpickr.min.css">
 
 
-	<title>Blogy &mdash; Free Bootstrap 5 Website Template by Untree.co</title>
+	<title>Blogy</title>
 </head>
 <body>
 
@@ -68,9 +68,10 @@
 							<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu mx-auto">
 								<li class="active"><a href="/Default/Index">Ana Sayfa</a></li>
 						
-								<li><a href="#">Hakkımızda</a></li>
-								<li><a href="#">Bloglar</a></li>
+								<li><a href="/About/Index/">Hakkımızda</a></li>
+								<li><a href="/Blog/Index/">Bloglar</a></li>
 								<li><a href="#">İletişim</a></li>
+								<li><a href="/Login/Index/">Giriş Yap</a></li>
 							</ul>
 						</div>
 						<div class="col-2 text-end">
